--- a/crates/lexer-utils/Cargo.toml
+++ b/crates/lexer-utils/Cargo.toml
@@ -1,10 +1,7 @@
 [package]
-name = "rmlx-lexer"
+name = "lexer-utils"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-tower-lsp.workspace = true
 logos.workspace = true
-
-lexer-utils.workspace = true
