--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ tokio = { version = "1.47.1", features = ["full"]}
 tower-lsp = "0.20.0"
 serde = "1.0.219"
 logos = "0.15.1"
+url = "2.5.7"
+chumsky = "1.0.0-alpha.8"
