--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ rmlx-lexer = { path = "crates/rmlx-lexer" }
 lexer-utils = { path = "crates/lexer-utils" }
 
 ron = "0.11.0"
-tokio = { version = "1.47.1", features = ["full"]}
+tokio = { version = "1.47.1", features = ["full", "rt", "macros"]}
 tower-lsp = "0.20.0"
 serde = "1.0.219"
 logos = "0.15.1"
 url = "2.5.7"
 reqwest = "0.12.23"
+thiserror = "2.0.16"
