--- a/crates/rmlx-lexer/Cargo.toml
+++ b/crates/rmlx-lexer/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+lexer-utils.workspace = true
+
 tower-lsp.workspace = true
 logos.workspace = true
-
-lexer-utils.workspace = true
+thiserror.workspace = true
+tokio.workspace = true
 url.workspace = true
 reqwest.workspace = true
