--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -58,3 +58,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./target/coverage/html
+          publish_branch: gh-pages
