--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -60,5 +60,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./target/coverage/html
+          publish_dir: ./target/coverage
           publish_branch: gh-pages
