--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -48,17 +48,17 @@ jobs:
             --branch \
             --ignore-not-existing \
             --ignore "/*" \
-            -o target/coverage
+            -o target/coverage/html
 
       - name: Upload coverage artifact
         uses: actions/upload-artifact@v4
         with:
           name: coverage-html
-          path: target/coverage
+          path: target/coverage/html
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./target/coverage
+          publish_dir: ./target/coverage/
           publish_branch: gh-pages
