--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Generate coverage report
         run: |
-          mkdir -p target/coverage/html
+          mkdir -p target/coverage
           grcov target/coverage \
             --binary-path ./target/debug/ \
             -s . \
@@ -48,17 +48,17 @@ jobs:
             --branch \
             --ignore-not-existing \
             --ignore "/*" \
-            -o target/coverage/html
+            -o target/coverage
 
       - name: Upload coverage artifact
         uses: actions/upload-artifact@v4
         with:
           name: coverage-html
-          path: target/coverage/html
+          path: target/coverage
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./target/coverage/html/
+          publish_dir: ./target/coverage
           publish_branch: gh-pages
