--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,50 +14,24 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
-      - name: Install Rust (stable)
+      
+      - name: Install Rust (nightly)
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: nightly
           override: true
-          
-      - name: Install llvm-tools
-        run: rustup component add llvm-tools-preview
-
-      - name: Install grcov
-        run: |
-          curl -L https://github.com/mozilla/grcov/releases/latest/download/grcov-x86_64-unknown-linux-gnu.tar.bz2 \
-            | tar jxf -
-          sudo mv grcov /usr/local/bin/
-
-      - name: Build with coverage flags
-        env:
-          RUSTFLAGS: "-Cinstrument-coverage"
-          LLVM_PROFILE_FILE: "target/coverage/%p-%m.profraw"
-        run: |
-          cargo build --verbose
-          cargo test --verbose
-
-      - name: Generate coverage report
-        run: |
-          mkdir -p target/coverage
-          grcov target/coverage \
-            --binary-path ./target/debug/ \
-            -s . \
-            -t html \
-            --branch \
-            --ignore-not-existing \
-            --ignore "/*" \
-            -o target/coverage
-
-      - name: Upload coverage artifact
-        uses: actions/upload-artifact@v4
+      - uses: actions-rs/cargo@v1
         with:
-          name: coverage-html
-          path: target/coverage
+          command: test
+          args: --all-features --no-fail-fast
+        env:
+          CARGO_INCREMENTAL: '0'
+          RUSTFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
+          RUSTDOCFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
+      - uses: actions-rs/grcov@v0.1
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./target/coverage
+          publish_dir: ${{ steps.coverage.outputs.report }}
