--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,7 +9,18 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  coverage:
+  cleanup:
+    runs-on: ubuntu-latest
+    permissions: write-all
+    steps:
+      - name: Delete Deployment Environment
+        uses: strumwolf/delete-deployment-environment@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          environment: github-pages
+          onlyRemoveDeployments: true
+  
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -48,3 +59,10 @@ jobs:
             --ignore-not-existing \
             --ignore "/*" \
             -o target/coverage/html
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./target/coverage/html
+          publish_branch: gh-pages
