wip semantic analyzer

--- a/crates/rmlx/Cargo.toml
+++ b/crates/rmlx/Cargo.toml
@@ -16,6 +16,7 @@ thiserror.workspace = true
 tokio.workspace = true
 url.workspace = true
 reqwest.workspace = true
+enum_dispatch.workspace = true
 
 [dev-dependencies]
 divan = { package = "codspeed-divan-compat", version = "*" }
