--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,8 +2,11 @@ name: Coverage
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - '**'
   pull_request:
+    branches:
+      - '**'
 
 env:
   CARGO_TERM_COLOR: always
