--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,14 @@ rmlx = { path = "crates/rmlx" }
 lexer-core = { path = "crates/lexer-core" }
 
 ron = "0.11.0"
-tokio = { version = "1.47.1", features = ["full", "rt", "macros"]}
+tokio = { version = "1.47.1", features = ["full", "rt", "macros"] }
 tower-lsp = "0.20.0"
-serde = "1.0.219"
+serde = "1.0.228"
 logos = "0.15.1"
 url = "2.5.7"
 reqwest = "0.12.23"
-thiserror = "2.0.16"
+thiserror = "2.0.17"
 enum_dispatch = "0.3.13"
+regex = "1.12.1"
+pest = "2.8.3"
+pest_derive = "2.8.3"
