--- a/crates/rmlx/Cargo.toml
+++ b/crates/rmlx/Cargo.toml
@@ -17,9 +17,9 @@ tokio.workspace = true
 url.workspace = true
 reqwest.workspace = true
 enum_dispatch.workspace = true
-
-pest = "2.8.2"
-pest_derive = "2.8.2"
+regex.workspace = true
+pest.workspace = true
+pest_derive.workspace = true
 
 [dev-dependencies]
 divan = { package = "codspeed-divan-compat", version = "*" }
